ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
10/15/08 Remi Ricard (papaDoc)
        * Add unit test to check if using directly a joint
          or using after setting with default values is the same.
        * Add function setRelativeValues called in dJointAttach for
          all joints.

10/10/08 Remi Ricard (papaDoc)
        * Fix bug in dJointGetPUAxis2. The axis was not multiplier with the
          the rotation matrix of the good body.
        * Fix bug if there is only one body on the PU joint the axis returned
          was not the right one.
        * Add unit test to verify previous bug.

10/03/08 Rodrigo Hernandez (Kwizatz)
	* Added Blender script to create ODE convex geoms under tools.

10/01/08 Rodrigo Hernandez (Kwizatz)
	* Convex-Convex collision detection code is finally stable.

08/31/08 Daniel K. O.
        * Applied patch 2080674: Improved dBodySetRotation; now exact rotation
          matrices are preserved until the next simulation step.

08/07/08 Daniel K. O.
        * Fixed strict aliasing issue that was breaking the new trimesh collider.

07/24/08 Daniel K. O.
        * New functions: dBodyGetGyroscopicMode and dBodySetGyroscopicMode
          (patch #2019242).

07/15/08  Remi Ricard (papaDoc)
        * Add a new define ODE_API_DEPRECATED to mark function as deprecated
          when necessary.

07/14/08 Remi Ricard (papaDoc)
        * Finish adding patch 1336066: Joint feedback in quickstep by jsinecky
        * demo_boxstack.cpp can now print joint feedback

07/11/08 Daniel K. O.
        * Bumped version for 0.10.1
        * Added proper usage of libtool's version info.

07/10/08 Remi Ricard (papaDoc)